--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -5,17 +5,12 @@
     <parent>
         <artifactId>ranksync</artifactId>
         <groupId>com.gmail.chickenpowerrr</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
     <artifactId>spigot</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>RankSync</name>
-
     <description>Sync your ranks Minecraft ranks between services</description>
 
     <build>
@@ -35,6 +30,8 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
+                    <finalName>RankSync-Spigot-${version}</finalName>
+
                     <relocations>
                         <relocation>
                             <pattern>com.zaxxer.hikari</pattern>
@@ -65,6 +62,13 @@
         </resources>
     </build>
 
+    <repositories>
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -84,6 +88,13 @@
             <groupId>me.lucko.luckperms</groupId>
             <artifactId>luckperms-api</artifactId>
             <version>4.3</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
