--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -5,24 +5,26 @@
     <parent>
         <artifactId>ranksync</artifactId>
         <groupId>com.gmail.chickenpowerrr</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>manager</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
-            <artifactId>api</artifactId>
+            <artifactId>discord</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
-            <artifactId>discord</artifactId>
+            <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
