--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <modules>
         <module>api</module>
         <module>discord</module>
-        <module>core</module>
         <module>spigot</module>
+        <module>manager</module>
     </modules>
 
     <build>
