--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -79,8 +79,8 @@
 
         <dependency>
             <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>manager</artifactId>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
 
