--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
