--- a/discord/pom.xml
+++ b/discord/pom.xml
@@ -33,6 +33,17 @@
             <artifactId>JDA</artifactId>
             <version>3.8.0_427</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.sf.trove4j</groupId>
+                    <artifactId>trove4j</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>club.minnced</groupId>
+                    <artifactId>opus-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
