auto generate tables

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -38,13 +38,13 @@ database:
 ranks:
 # The platform whose ranks should be synced
   discord:
-# A random prefix that is handy for you. The code doesn't do anything with it.
+# A random UNIQUE prefix that is handy for you. The code doesn't do anything with it as long as it is unique.
     test:
 # The name of the Minecraft group. It is case sensitive
       minecraft: "admin"
 # The name of the Discord group. It is case insensitive
       discord: "Minecraft Administrator"
-# A random prefix that is handy for you. The code doesn't do anything with it.
+# A random UNIQUE prefix that is handy for you. The code doesn't do anything with it as long as it is unique.
     kaas:
 # The name of the Minecraft group. It is case sensitive
       minecraft: "mod"
