--- a/api/pom.xml
+++ b/api/pom.xml
@@ -19,6 +19,13 @@
             <version>1.18.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.gmail.chickenpowerrr</groupId>
+            <artifactId>languagehelper</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
