--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -2,7 +2,6 @@
 # For a more detailed explanation, please see https://github.com/Chickenpowerrr/RankSync/wiki/Language
 language: english
 
-# The basic setup for Discord
 discord:
 # The Discord token of your bot. More information on how you can create this token,
 # please use this tutorial on how to create a token:
@@ -13,18 +12,19 @@ discord:
   guild-id: 444222000
 # The basic setup where all of the data should be saved
 database:
-# The way the data should be saved, right now SQL is the only supported way of saving data
-  type: "SQL"
+# The way the data should be saved
+# There are two options: SQL and yaml
+  type: "yaml"
 
-# The basic SQL setup
+# The basic SQL setup, only relevant if you're going to use the SQL feature
   sql:
 # The maximum pool size for SQL
     max-pool-size: 10
-# The host that runs the SQL server
+# The host the SQL server is running on
     host: "127.0.0.1"
-# The port the SQL server runs on, it is 3306 by default
+# The SQL server port, it is 3306 by default
     port: 3306
-# The database that will contain all of the data
+# The target database in the SQL server
     database: "ranksync"
 # The username to login into the SQL server
     user: "root"
