add NameSync and some experience updates
- A configuration update to ignore not synced players
- A better explanation when an invalid token has been provided
- Config defaults for the new options

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -3,6 +3,10 @@
 language: english
 
 discord:
+# If the synced ranks should be removed from someone who hasn't synced their account
+  update-non-synced: true
+# If the Discord nickname of a user should be the same as their Minecraft name
+  sync-names: false
 # The Discord token of your bot. More information on how you can create this token,
 # please use this tutorial on how to create a token:
 # https://github.com/Chickenpowerrr/RankSync/wiki/Getting-a-Discord-Token
