add Bungeecord support

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>discord</module>
         <module>spigot</module>
         <module>manager</module>
+        <module>server</module>
+        <module>bungee</module>
     </modules>
 
     <build>
