--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,5 +40,12 @@
       <version>4.3</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
