--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -49,6 +49,11 @@
               <pattern>org.json</pattern>
               <shadedPattern>com.gmail.chickenpowerrr.ranksync.lib.json</shadedPattern>
             </relocation>
+
+            <relocation>
+              <pattern>org.bstats</pattern>
+              <shadedPattern>com.gmail.chickenpowerrr.ranksync.lib.bstats</shadedPattern>
+            </relocation>
           </relocations>
         </configuration>
 
@@ -74,6 +79,11 @@
     <repository>
       <id>sonatype-oss-repo</id>
       <url>https://oss.sonatype.org/content/groups/public/</url>
+    </repository>
+
+    <repository>
+      <id>CodeMC</id>
+      <url>https://repo.codemc.org/repository/maven-public</url>
     </repository>
   </repositories>
 
@@ -131,6 +141,13 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bstats</groupId>
+      <artifactId>bstats-bungeecord</artifactId>
+      <version>1.5</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
