--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -48,6 +48,11 @@
                             <pattern>org.json</pattern>
                             <shadedPattern>com.gmail.chickenpowerrr.ranksync.lib.json</shadedPattern>
                         </relocation>
+
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>com.gmail.chickenpowerrr.ranksync.lib.bstats</shadedPattern>
+                        </relocation>
                     </relocations>
                 </configuration>
 
@@ -73,6 +78,11 @@
         <repository>
             <id>vault-repo</id>
             <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+        </repository>
+
+        <repository>
+            <id>CodeMC</id>
+            <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
     </repositories>
 
@@ -131,6 +141,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>1.5</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
