--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <module>bungee</module>
     </modules>
 
+    <properties>
+        <java.version>8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
