--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,14 +23,14 @@
     <dependency>
       <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
       <artifactId>manager</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
       <artifactId>api</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
     </dependency>
 
