--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -20,6 +20,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.2</version>
         <configuration>
           <archive>
             <manifest>
@@ -43,7 +44,7 @@
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <finalName>RankSync-Bungee-${version}</finalName>
+          <finalName>RankSync-Bungee-${project.version}</finalName>
           <relocations>
             <relocation>
               <pattern>org.json</pattern>
@@ -98,7 +99,7 @@
     <dependency>
       <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
       <artifactId>manager</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
 
       <exclusions>
@@ -112,14 +113,14 @@
     <dependency>
       <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
       <artifactId>server</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
       <artifactId>api</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
     </dependency>
 
