--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -19,6 +19,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -42,7 +43,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <finalName>RankSync-Spigot-${version}</finalName>
+                    <finalName>RankSync-Spigot-${project.version}</finalName>
                     <relocations>
                         <relocation>
                             <pattern>org.json</pattern>
@@ -97,7 +98,7 @@
         <dependency>
             <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
             <artifactId>manager</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <scope>compile</scope>
 
             <exclusions>
@@ -111,14 +112,14 @@
         <dependency>
             <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
             <artifactId>server</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
             <artifactId>api</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <scope>compile</scope>
         </dependency>
 
