--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: ${parent.name}
+name: ${project.parent.name}
 version: ${project.version}
-main: ${project.groupId}.${project.artifactId}.${parent.name}Plugin
+main: ${project.groupId}.${project.artifactId}.${project.parent.name}Plugin
 softdepend: [LuckPerms, Vault]
 author: Chickenpowerrr
 description: ${project.description}
