--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -81,6 +81,13 @@
       <version>1.5</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>me.lucko.luckperms</groupId>
+      <artifactId>luckperms-api</artifactId>
+      <version>4.4</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
