--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>ranksync</artifactId>
   <name>RankSync</name>
   <packaging>pom</packaging>
-  <version>1.3.2</version>
+  <version>1.3.3-ALPHA</version>
   <modules>
     <module>api</module>
     <module>discord</module>
