--- a/server/src/main/resources/config.yml
+++ b/server/src/main/resources/config.yml
@@ -1,66 +1,65 @@
-# The language that should be used (all supported language can be found in the /plugin/RankSync/language directory.
-# For a more detailed explanation, please see https://github.com/Chickenpowerrr/RankSync/wiki/Language
+# language:
+# All available languages are available in the /plugins/RankSync/language/ directory
+# For more information, see: https://github.com/Chickenpowerrr/RankSync/wiki/Language
+#
+# discord:
+#   update-non-synced: If the ranks from non-synced users should be removed
+#   sync-names: If the usernames of users should be updated to their ingame name
+#   token: The Discord Token, for more information see:
+#          https://github.com/Chickenpowerrr/RankSync/wiki/Getting-a-Discord-Token
+#   permission-warnings: If the plugin should notify the console when it isn't able to
+#                        perform a certain task
+# database:
+#   type: Yaml or SQL
+#
+#   sql:
+#     max-pool-size: Don't this if you don't know what it is
+#     host: The host the SQL server is running on
+#     port: The SQL server port, it is 3306 by default
+#     database: The target database in the SQL server
+#     user: The username to login into the SQL server
+#     password: The password to login into the SQL server
+#
+#   ranks: For more information see: https://github.com/Chickenpowerrr/RankSync/wiki/Ranks
+#     discord: Don't touch this
+#       administrator: A random UNIQUE prefix that is handy for you.
+#                      The code doesn't do anything with it as long as it is UNIQUE.
+#         minecraft: The name of the Minecraft group. It is case sensitive
+#         discord: The name of the Discord group. It is case insensitive
+#
+# For more information see:
+# - https://github.com/Chickenpowerrr/RankSync/wiki
+# - https://discord.gg/zDsmRTd
+
 language: english
 
 discord:
-# If the synced ranks should be removed from someone who hasn't synced their account
-  update-non-synced: true
-# If the Discord nickname of a user should be the same as their Minecraft name
+  update-non-synced: false
   sync-names: false
-# The Discord token of your bot. More information on how you can create this token,
-# please use this tutorial on how to create a token:
-# https://github.com/Chickenpowerrr/RankSync/wiki/Getting-a-Discord-Token
   token: "YOURTOKEN"
-# This defines the server that will use this bot. This token can be found like this:
-# https://github.com/Chickenpowerrr/RankSync/wiki/Getting-a-Discord-Guild-id
   guild-id: 444222000
-# If the bot should send warnings when the bot doesn't have sufficient permissions
   permission-warnings: true
-# The basic setup where all of the data should be saved
 database:
-# The way the data should be saved
-# There are two options: SQL and yaml
   type: "yaml"
 
-# The basic SQL setup, only relevant if you're going to use the SQL feature
   sql:
-# The maximum pool size for SQL
     max-pool-size: 10
-# The host the SQL server is running on
     host: "127.0.0.1"
-# The SQL server port, it is 3306 by default
     port: 3306
-# The target database in the SQL server
     database: "ranksync"
-# The username to login into the SQL server
     user: "root"
-# The password to login into the SQL server
     password: ""
 
-# The ranks that should be synchronized between Discord and Minecraft.
-# Please note that the Minecraft ranks define which Discord ranks will be given to the Player.
-# Changes to the Discord ranks on the other hand will have no impact on the Minecraft rank.
-# See https://github.com/Chickenpowerrr/RankSync/wiki/Ranks for more information
 ranks:
-# The platform whose ranks should be synced
   discord:
-# A random UNIQUE prefix that is handy for you. The code doesn't do anything with it as long as it is UNIQUE.
     administrator:
-# The name of the Minecraft group. It is case sensitive
       minecraft: "admin"
-# The name of the Discord group. It is case insensitive
       discord: "Minecraft Administrator"
-# A random UNIQUE prefix that is handy for you. The code doesn't do anything with it as long as it is UNIQUE.
     moderator:
-# The name of the Minecraft group. It is case sensitive
       minecraft: "mod"
-# The name of the Discord group. It is case insensitive
       discord: "Minecraft Moderator"
-# A random UNIQUE prefix that is handy for you. The code doesn't do anything with it as long as it is UNIQUE.
     vip:
-# The name of the Minecraft group. It is case sensitive
       minecraft: "VIP"
-# Multiple Discord ranks synced to one Minecraft rank
       discord:
         - "VIP"
         - "Donator"
