--- a/server/src/main/resources/config.yml
+++ b/server/src/main/resources/config.yml
@@ -27,6 +27,18 @@
 #     user: The username to login into the SQL server
 #     password: The password to login into the SQL server
 # -
+#   reward:
+#     max-enabled: The maximum times a user can receive the sync commands can be executed for the
+#                  given player, -1 if it should be executed every time
+#     enabled-sync: If the sync commands should be executed
+#     sync-commands: The command that should be executed when someone syncs their account, %player%
+#                    is the placeholder for the player who synced their account
+#     max-disabled: The maximum times a user can receive the unsync commands can be executed for the
+#                   given player, -1 if it should be executed every time
+#     enabled-unsync: If the unsync commands should be executed
+#     unsync-commands: The command that should be executed when someone unsyncs their account,
+#                      %player%  is the placeholder for the player who unsynced their account
+# -
 #   ranks: For more information see: https://github.com/Chickenpowerrr/RankSync/wiki/Ranks
 #     discord: Don't touch this
 #       administrator: A random UNIQUE prefix that is handy for you.
@@ -59,6 +71,16 @@ database:
     database: "ranksync"
     user: "root"
     password: ""
+
+reward:
+  max-enabled: 1
+  enabled-sync: false
+  sync-commands:
+    - "give %player% diamond"
+  max-disabled: -1
+  enabled-unsync: false
+  unsync-commands:
+    - "give %player% dirt"
 
 ranks:
   discord:
