--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>ranksync</artifactId>
     <groupId>com.gmail.chickenpowerrr</groupId>
-    <version>1.3.3</version>
+    <version>1.4.0-ALPHA</version>
   </parent>
 
   <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
