--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,5 +40,12 @@
       <version>4.4</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>net.luckperms</groupId>
+      <artifactId>api</artifactId>
+      <version>5.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
