--- a/discord/pom.xml
+++ b/discord/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>ranksync</artifactId>
     <groupId>com.gmail.chickenpowerrr</groupId>
-    <version>1.4.0-ALPHA</version>
+    <version>1.4.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
