--- a/discord/pom.xml
+++ b/discord/pom.xml
@@ -11,4 +11,34 @@
 
   <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
   <artifactId>discord</artifactId>
+
+  <repositories>
+    <repository>
+      <id>jcenter</id>
+      <name>jcenter-bintray</name>
+      <url>https://jcenter.bintray.com</url>
+    </repository>
+  </repositories>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.gmail.chickenpowerrr.ranksync</groupId>
+      <artifactId>core</artifactId>
+      <version>2.0.0-ALPHA</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>net.dv8tion</groupId>
+      <artifactId>JDA</artifactId>
+      <version>4.1.1_108</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>club.minnced</groupId>
+          <artifactId>opus-java</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+  </dependencies>
 </project>
