--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -81,6 +81,13 @@
       <version>1.5</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
